# cocos2d-x-3rd-party-libs-bin

./: version.json
Box2D/prebuilt/win32/debug/: libbox2d.lib
Box2D/prebuilt/win32/release/: libbox2d.lib
Box2D/prebuilt/x64/debug/: libbox2d.lib
Box2D/prebuilt/x64/release/: libbox2d.lib
bullet/: CMakeLists.txt
bullet/prebuilt/win32/debug/: BulletFileLoader.lib  BulletInverseDynamics.lib  LinearMath.lib
bullet/prebuilt/win32/release/: BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletSoftBody.lib  LinearMath.lib
bullet/prebuilt/x64/: BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletSoftBody.lib  LinearMath.lib
bullet/prebuilt/x64/debug/: BulletInverseDynamics.lib  LinearMath.lib
bullet/prebuilt/x64/release/: BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletSoftBody.lib  LinearMath.lib
chipmunk/prebuilt/win32/debug-lib/: libchipmunk.lib
chipmunk/prebuilt/win32/release-lib/: libchipmunk.lib
chipmunk/prebuilt/x64/debug-lib/: libchipmunk.lib
chipmunk/prebuilt/x64/release-lib/: libchipmunk.lib
cmake/: CocosExternalConfig.cmake
glfw3/prebuilt/x64/: glfw3.lib
lua/luajit/prebuilt/x64/: lua51.lib
openssl/prebuilt/x64/: libcrypto.lib  libssl.lib
png/prebuilt/x64/: libpng.lib
unzip/: ioapi.cpp
webp/prebuilt/x64/: libwebp.lib
websockets/prebuilt/x64/: websockets.lib
win32-specific/MP3Decoder/: CMakeLists.txt
win32-specific/MP3Decoder/prebuilt/win32/: libmpg123.lib
win32-specific/MP3Decoder/prebuilt/x64/: libmpg123.lib
win32-specific/OggDecoder/: CMakeLists.txt
win32-specific/OpenalSoft/: CMakeLists.txt
win32-specific/gles/: CMakeLists.txt
zlib/: CMakeLists.txt
(+2 files in other folders)
